@@ -3,11 +3,14 @@ package com.zgt.ojcodesandbox.languageCodeSandbox;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
 import com.zgt.ojcodesandbox.CodeSandbox;
 import com.zgt.ojcodesandbox.model.ExceuteMessage;
 import com.zgt.ojcodesandbox.model.ExecuteCodeRequest;
 import com.zgt.ojcodesandbox.model.ExecuteCodeResponse;
 import com.zgt.ojcodesandbox.model.JudgeInfo;
+import com.zgt.ojcodesandbox.security.DefaultSecurityManager;
 import com.zgt.ojcodesandbox.utils.ProcessUtils;
 import org.springframework.util.StringUtils;
 
@@ -16,6 +19,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
+import java.sql.SQLOutput;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -27,13 +31,32 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
     // 固定java代码的类名
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
+    //超时时间
+    private static final long TIME_OUT = 5000L;
+    //代码里敏感包,方法调用检测 黑名单
+    private static final List<String> BLACK_LIST = Arrays.asList("Files", "exec");
+    private static final WordTree WORD_TREE;
+
+    // 自定义的安全管理器,只在运行用户的代码时实施,在cmd命令中指定
+    private static final String SECURITY_MANAGER_PATH = "C:\\code\\oj-code-sandbox\\src\\main\\resources\\security";
+    // 自定义的安全管理器名称
+    private static final String SECURITY_MANAGER_CLASS_NAME = "MySecurityManager";
+
+    static {
+        // 初始化字典树 校验代码是否包含黑名单中的命令
+        // HuTool工具包中的字典树(高效查找词汇)
+        WORD_TREE = new WordTree();
+        WORD_TREE.addWords(BLACK_LIST);
+    }
 
 
     public static void main(String[] args) {
         JavaNativeCodeSandbox javaNativeCodeSandbox = new JavaNativeCodeSandbox();
         ExecuteCodeRequest executeCodeRequest = new ExecuteCodeRequest();
         executeCodeRequest.setInputList(Arrays.asList("1 2", "1 3"));
-        String code = ResourceUtil.readStr("testCode/simpleComputeArgs/Main.java", StandardCharsets.UTF_8);
+        //  String code = ResourceUtil.readStr("testCode/simpleComputeArgs/Main.java", StandardCharsets.UTF_8);
+        //  String code = ResourceUtil.readStr("testCode/unsafe/SleepError.java", StandardCharsets.UTF_8);
+        String code = ResourceUtil.readStr("testCode/unsafe/RunFileError.java", StandardCharsets.UTF_8);
         executeCodeRequest.setCode(code);
         executeCodeRequest.setLanguage("java");
         ExecuteCodeResponse executeCodeResponse = javaNativeCodeSandbox.executeCode(executeCodeRequest);
@@ -43,9 +66,22 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
 
+        //权限校验 读写权限. 实际情况我们只要限制用户代码执行时的权限控制,放在这里是不合适的.
+//        System.setSecurityManager(new DefaultSecurityManager());
+
         List<String> inputList = executeCodeRequest.getInputList();
         String code = executeCodeRequest.getCode();
         String language = executeCodeRequest.getLanguage();
+
+        //检验用户代码中的敏感词,防攻击
+        //  WordTree wordTree = new WordTree(); 在静态代码块中初始化
+        // wordTree.addWords(BLACK_LIST);
+        FoundWord foundWord = WORD_TREE.matchWord(code);
+        if (foundWord != null) {
+            System.out.println("包含敏感词: " + foundWord);
+            return null;
+        }
+
 
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
@@ -71,13 +107,29 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
             return getErrorResponse(e);
         }
 
-        // 执行编译后的代码， 得到输出结果  -Dfile.encoding=UTF-8解决控制台输出乱码
+        // 执行编译后的代码， 得到输出结果  -Dfile.encoding=UTF-8解决控制台输出乱码 -Xms限制最大堆
         // 保存每组示例的执行结果
         List<ExceuteMessage> executeMessageList = new ArrayList<>();
         for (String inputArgs : inputList) {
-            String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+            // 设置字符集
+            //  String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+            // 限制堆大小
+              String runCmd = String.format("java -Xms256 -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+            // 限制权限
+            //  String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME, inputArgs);
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
+
+                // 开启一个新的线程,相当于监听着runProcess执行的时间,超时就杀了它,不完美,示例.
+                new Thread(() -> {
+                    try {
+                        Thread.sleep(TIME_OUT);
+                        System.out.println("超时,中断");
+                        runProcess.destroy();
+                    } catch (InterruptedException e) {
+                        throw new RuntimeException(e);
+                    }
+                }).start();
 
                 ExceuteMessage exceuteMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
                 // ACM格式 用户代码编写时用Scanner接收数据
@@ -133,6 +185,7 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
 
     /**
      * 错误处理方法,执行沙箱出错时,直接返回响应对象
+     *
      * @param e
      * @return
      */
